<resources>
    <string name="app_name">MyDiagnosisTreatment</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_logout">Logout</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_not_matching_passwords">Password does not match</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_input_symptoms">Please input symptoms</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_client">ClientActivity</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_diagnosis">Diagnosis</string>
    <string name="title_add_diagnosis">Add Diagnosis</string>
    <string name="title_past_treatments">Past Treatments</string>
    <string name="diagnosis_details_treatment">Treatment</string>
    <string name="diagnosis_details_medication">Medication</string>
    <string name="diagnosis_details_dose">dose</string>
    <string name="diagnosis_details_notes_text">Notes</string>
    <string name="diagnosis_details_notes">Note details</string>
    <string name="diagnosis_details_period">14 days</string>
    <string name="diagnosis_details_name">Fever</string>
    <string name="diagnosis_details_subscribe">subscribe</string>
    <string name="diagnosis_details_unsubscribe">unsubscribe</string>

    <string name="dashboard_fragment">Dashboard fragment</string>
    <string name="diagnosis_fragment">Diagnosis fragment</string>
    <string name="dashboard_no_treatment">No Current Treatment</string>
    <string name="past_treatments_fragment">Past treatments fragment</string>
    <string name="past_treatments_text">Past Treatments</string>
    <string name="dashboard_clock">clock</string>
    <string name="prompt_symptoms">Input symptoms…</string>
    <string name="action_search">search</string>
    <string name="dashboard_pills_to_take_1">You have</string>
    <string name="dashboard_pills_to_take_3">left to take today</string>
    <string name="channel_name">My Channel</string>
    <string name="channel_description">My Channel Description</string>

    <string name="my_diagnosis_treatment">My Diagnosis Treatment</string>
    <string name="login_as_doctor">Login as doctor</string>
    <string name="login_as_patient">Login as patient</string>
    <string name="add_diagnosis">Add Diagnosis</string>
    <string name="period">Period</string>

    <string name="prompt_diagnosis_name">Diagnosis name</string>
    <string name="prompt_period">period</string>
    <string name="prompt_keywords">keywords</string>
    <string name="prompt_notes">notes</string>
    <string name="prompt_medication_name">name</string>
    <string name="prompt_medication_dose">dose</string>
    <string name="action_add_diagnosis">Add</string>

</resources>
