<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.tabita.mydiagnosistreatment.activities.LoginActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:textSize="30sp"
        android:text="@string/my_diagnosis_treatment" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/section_doctor"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/icon_doctor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/doctor" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10sp"
                android:text="@string/login_as_doctor"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/section_patient"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/icon_patient"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/patient" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10sp"
                android:text="@string/login_as_patient"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>


</LinearLayout>