<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10sp"
    tools:context=".DashboardFragment">

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:textColor="@color/colorAccent"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/currentTreatment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50sp"
        android:gravity="center"
        android:text="@string/dashboard_no_treatment"
        android:textColor="@color/colorGray"
        android:textSize="35sp" />

    <Button
        android:id="@+id/unsubscribe"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/currentTreatment"
        android:text="@string/diagnosis_details_unsubscribe" />

    <TextView
        android:id="@+id/period"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/currentTreatment"
        android:gravity="center"
        android:textColor="@color/colorAccent"
        android:textSize="15sp" />

    <ListView
        android:id="@+id/medication_list"
        android:layout_width="wrap_content"
        android:layout_height="100sp"
        android:layout_below="@id/period"
        android:layout_marginEnd="20sp"
        android:layout_marginStart="20sp"
        android:layout_marginTop="40sp"
        android:textColor="@color/colorGray"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/clock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/medication_list"
        android:contentDescription="@string/dashboard_clock"
        android:src="@drawable/ic_clock" />

    <TextView
        android:id="@+id/takePills"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/clock"
        android:layout_marginTop="50sp"
        android:gravity="center"
        android:text="You have 2 pills of paracetamol left to take today"
        android:textColor="@color/colorGray" />

</RelativeLayout>